--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/three": "^0.164.0",
+    "dat.gui": "^0.7.9",
+    "three": "^0.164.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "three": "^0.164.1"
-  },
-  "dependencies": {
-   
+    "vite": "^5.2.0"
   }
 }
