--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d ./dist"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
     "@types/three": "^0.164.0",
     "dat.gui": "^0.7.9",
+    "gh-pages": "^6.1.1",
     "three": "^0.164.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
